# ai_media_analysis

./: .coverage  .cursorrules  .cursorrules.cloud  .cursorrules.docs  .cursorrules.formatting  .cursorrules.vps  .env.example  .gitignore  .pre-commit-config.yaml  API.md  BRANCHING_TEST.md  CHANGELOG.md  COMMIT_MESSAGE.md  COMPLIANCE_REPORT.md  CONTRIBUTING.md  CURSOR_RULES_REVIEW.md  DEVELOPMENT_STRATEGY  FEHLER_HISTORIE.md  FORMATIERUNG_REPORT.md  GRUNDLAGENARBEIT_ERLEDIGT.md  KORREKTUREN_UMGESETZT.md  LASTENHEFT.md  LICENSE.md  MERKZETTEL_NAECHSTE_SITZUNG.md  Makefile  PROJECT_STATE.md  README.md  README_INSIGHTS_DATABASE.md  README_REID_INTEGRATION.md  ROADMAP.md  STATUS.md  UC001_JOB_MANAGER_INTEGRATION.md  UC001_WEB_INTERFACE_COMPLETED.md  docker-compose.yml  docker-compose.yml.backup.iteration-1  pyproject.toml  pytest.ini  pytest.ini.backup  requirements-ci.txt  requirements.txt  (+3 more)
.cursorrules/: README.md
.cursorrules-backup/: README.md
.cursorrules-backup/rules/: black_standard.md  iterative_development.md  uc001_integration.md  venv_development.md
.cursorrules/rules/: black_standard.md  config_validation.md  feature_testing.md  formatting.md  linter_compliance.md
.github/workflows/: black-standard.yml  config-validation.yml  feature-testing.yml  linter-compliance.yml  tests.yml  venv-validation.yml
config/: environment.example  hybrid_config.yml
control/: llm_config.json  llm_fallback.py  provider_router.py  summarizer.py
data/control/: README.md
data/frames/: README.md
data/results/: README.md
data/review/: README.md
data/videos/: README.md
data_schema/: chunk-meta.schema.json  insights_database.py  meta-summary.schema.json  persistence_config.json  person_dossier.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_SIMPLE.md  DEVELOPMENT_GUIDELINES.md  UC-001-ENHANCED-MANUAL-ANALYSIS.md  UC-001-INTEGRATION-COMPLETE.md  status.md
docs/features/UC-001/: UC-001-CLOUD-ENHANCEMENT.md  UC-001-RULES.md  UC-001-USER-SCENARIOS.md
embedding_server/: Dockerfile
llm_interface/: README.md
llm_summarizer/: Dockerfile
object_review/: Dockerfile  requirements.txt
ocr_logo_title/: Dockerfile  README.md  main.py  requirements.txt
preprocess/: README.md
qdrant/: README.md
reports/: linter-compliance-report.json  linter-compliance-report.md
requirements/: base.txt  development.txt  testing.txt
requirements/services/: cloud.txt  llm.txt  vision.txt
scripts/: clean-structure.ps1  dev-setup.sh  format-check.ps1  format-check.sh  generate_service_config.py  health-check-all.sh  iteration-status.sh  linter_compliance.py  migrate_services_to_base.py  restructure-services.sh  validate_config.py  validate_feature_tests.py  venv_check.py  venv_setup.py
services/clip_nsfw/: Dockerfile  README.md  main.py  requirements.txt
services/clip_service/: Dockerfile  main.py  requirements.txt
services/clothing_analyzer/: Dockerfile  clothing_categories.json  main.py  requirements.txt
services/common/: __init__.py  advanced_logging.py  base_service.py  cloud_storage.py  error_handler.py  insights_service.py  logging_config.py  redis_config.py  service_integration_guide.py
services/control/: Dockerfile  llm_config.json  llm_fallback.py  main.py  prefect_watchdog.py  provider_router.py  requirements.txt  run_all_modules.py  safe_wrapper.py  summarizer.py
services/embedding_server/: requirements.txt  serve.py
services/face_reid/: Dockerfile  README.md  main.py  requirements.txt
services/guardrails/: main.py
services/guardrails/config/: blocked_patterns.json  guardrails.json
services/insights_api/: Dockerfile  app.py
services/insights_api/templates/: search_complex.html
services/job_manager/: Dockerfile  Dockerfile.api  Dockerfile.uc001  api.py  gpu_providers.py  main.py  manager.py  process_batch.py  requirements.txt  uc001_api.py  uc001_pipeline.py
services/llm_service/: Dockerfile  README.md  examples.py  main.py  media_integration.py  requirements.txt  run_tests.sh  service_integration.py  vector_integration.py
services/llm_service/tests/: conftest.py  test_service_integration.py
services/llm_summarizer/: requirements.txt
services/nginx/: Dockerfile  nginx.conf
services/nsfw_detection/: main.py
services/object_review/: Dockerfile  review_manager.py
services/ocr_detection/: Dockerfile  README.md  main.py  requirements.txt
services/person_dossier/: Dockerfile  insights_dossier_service.py  main.py  requirements.txt
services/person_dossier/data_schema/: chunk-meta.schema.json
services/pose_estimation/: Dockerfile  Dockerfile.cpu  README.md  config.py  main.py  optimization.py  requirements.txt
services/restraint_detection/: Dockerfile  main.py  requirements.txt
services/thumbnail_generator/: Dockerfile  generator.py
services/ui/: Dockerfile  api.py  main.py  package-lock.json  package.json  requirements.txt  streamlit_review.py
services/ui/public/: index.html
services/vector_db/: README.md  main.py  requirements.txt
services/video_context_analyzer/: Dockerfile  main.py  requirements.txt
services/vision_pipeline/: Dockerfile  Dockerfile.job_processor  README.md  api.py  detect_track.py  embeddings.py  job_processor.py  main.py  nsfw.py  nsfw_check.py  ocr.py  pose.py  requirements.txt  restraint_detector.py
services/whisper_service/: Dockerfile  main.py  requirements.txt
services/whisper_transcriber/: Dockerfile  README.md  main.py  requirements.txt
setup/: Dockerfile.persistence  create_env.sh  data_persistence.py  env.example  init_structure.sh  install_docker.sh  requirements.txt
streamlit_ui/: README.md  person_dossier.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_system_health.py
tests/integration/: test_llm_service_integration.py  test_service_integration.py
tests/security/: __init__.py  test_security_checks.py
tests/unit/: test_base_service.py  test_vision_pipeline.py
ui/: Dockerfile  requirements.txt  streamlit_review.py
vision_pipeline/: detect_track.py  embeddings.py  main.py  ocr.py  requirements.txt
whisper/: README.md
(+21 files in other folders)
